[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alarmclock"
version = "0.3.0"
description = "A small, SOLID, stdlib-only CLI alarm clock."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "alarmclock contributors" }]
keywords = ["alarm", "clock", "cli", "terminal"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
# Runtime is stdlib-only: no dependencies.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
alarmclock = "alarmclock.cli.app:main"

[project.urls]
Homepage = "https://github.com/your-username/alarmclock"

[tool.hatch.build.targets.wheel]
packages = ["src/alarmclock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
